[WIP] last minor improvements for demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <!-- Grey bar -->
     <div class="order-2 w-5">
       <div class="drag-bar">
+
         <div class="btn-group-vertical">
           <button (click)="layoutService.increaseLayoutRight()"
                   class="btn btn-sm btn-secondary btnLayout">
@@ -29,7 +30,17 @@
                   role="button">
             <fa-icon [icon]="faExchangeAlt"></fa-icon>
           </button>
+
+          <button (click)="setLanguage('de')"
+                  class="btn btn-sm btn-secondary btnLayout">
+            DE
+          </button>
+          <button (click)="setLanguage('en')"
+                  class="btn btn-sm btn-secondary btnLayout">
+            EN
+          </button>
         </div>
+
       </div>
     </div>
 
