--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -20,7 +20,7 @@
 
 <hr>
 
-<h3>{{'MAIN_INFO_LAYOUT_TITLE' | translate}}</h3>
+<h3>{{'MAIN_INFO_LAYOUT_LANG_TITLE' | translate}}</h3>
 <p>{{'MAIN_INFO_LAYOUT_DESCRIPTION' | translate}}</p>
 <ul>
   <li>
@@ -37,6 +37,8 @@
     {{'MAIN_INFO_LAYOUT_STEP_3' | translate}}
   </li>
 </ul>
+
+<p>{{'MAIN_INFO_LANG_DESCRIPTION' | translate}}</p>
 
 <!--<hr>-->
 
