--- a/src/app/components/sidebar-manage/sidebar-manage.component.html
+++ b/src/app/components/sidebar-manage/sidebar-manage.component.html
@@ -1,6 +1,9 @@
 <div class="p-2">
 
-  <h5>{{'SIDEBAR_MANAGE_TITLE' | translate}}</h5>
+  <h5>{{'SIDEBAR_MANAGE_TITLE' | translate}}
+
+    <span class="flag-icon flag-icon-squared flag-icon-gr"></span>
+  </h5>
 
   <table class="mb-3 table table-borderless">
     <tr *ngFor="let network of dataService.networksParsed" class="border-bottom">
@@ -131,9 +134,4 @@
     </div>
   </div>
 
-  <a [routerLink]="['', { outlets: {primary: ['info']} }]" class="mb-3 btn btn-block btn-outline-danger"
-     data-toggle="tooltip"
-     ngbTooltip="{{'SIDEBAR_MANAGE_TT_HELP' | translate}}" placement="bottom" role="button">
-    {{'SIDEBAR_MANAGE_HELP'|translate}}
-  </a>
 </div>
