--- a/src/app/components/main-info/main-info.component.html
+++ b/src/app/components/main-info/main-info.component.html
@@ -56,13 +56,26 @@
 <p>
   <fa-icon [icon]="faUserGraduate" [size]="'lg'" class="mr-3"></fa-icon>
   {{'SIDEBAR_COMPARE_ABOUT_2_1' | translate}}
-  <a href="mailto:simone1.mayer@student.uni-augsburg.de" target="_blank"><b>Simone Mayer</b></a>
+  <a href="mailto:simone1.mayer@student.uni-augsburg.de"
+     target="_blank"
+     data-toggle="tooltip"
+     ngbTooltip="{{'MAIN_INFO_TT_MAIL_MAYER' | translate}}"
+     placement="{{layoutService.layout.main.tooltipDirection}}">
+    <b>Simone Mayer</b>
+  </a>
   {{'SIDEBAR_COMPARE_ABOUT_2_2' | translate}}
 </p>
 <p>
   <fa-icon [icon]="faComments" [size]="'lg'" class="mr-3"></fa-icon>
   {{'SIDEBAR_COMPARE_ABOUT_3_1' | translate}}
-  <a href="mailto:florian.auer@informatik.uni-augsburg.de" id="mailto" target="_blank"><b>Florian Auer</b></a>
+  <a href="mailto:florian.auer@informatik.uni-augsburg.de"
+     id="mailto"
+     target="_blank"
+     data-toggle="tooltip"
+     ngbTooltip="{{'MAIN_INFO_TT_MAIL_AUER' | translate}}"
+     placement="{{layoutService.layout.main.tooltipDirection}}">
+    <b>Florian Auer</b>
+  </a>
   {{'SIDEBAR_COMPARE_ABOUT_3_2' | translate}}
 </p>
 
